classDiagram
    class Main {
        +main(argc, argv)
    }

    class AppConfig {
        +bool cli_mode
        +bool l2_mode
        +string iface
        +bool payload_only
        +Filter filter
    }
    
    class IApp {
        <<interface>>
        +run()* int
    }
    
    class CliApp {
        -AppConfig config
        +CliApp(config)
        +run() int
    }
    
    class GuiApp {
        -AppConfig config
        +GuiApp(config)
        +run() int
    }
    
    class L2Capture {
        +open_capture(iface)
        +close_capture()
        +poll(logs, filter)
    }
    
    class Filter {
        +enabled
        +src, dst, type
    }
    
    Main --> AppConfig : creates
    Main --> IApp : instantiates
    
    IApp <|.. CliApp
    IApp <|.. GuiApp
    
    CliApp --> L2Capture : uses
    GuiApp --> L2Capture : uses
    
    L2Capture --> Filter : uses
